fix svg overflow

--- a/sass/sass/screen.scss
+++ b/sass/sass/screen.scss
@@ -159,6 +159,9 @@ button {
 .stat-count {
 	font-weight: 700;
 }
+svg {
+	overflow: visible;
+}
 .node {
   cursor: pointer;
 }
